--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.2"
+    "express-session": "^1.17.2",
+    "mongoose": "^5.12.12",
+    "path": "^0.12.7"
   }
 }
