--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "illustration-lib",
   "version": "1.0.0",
-  "description": "",
+  "description": "an open source illustration library",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "client-install": "npm install --prefix client",
+    "start": "node server.js",
+    "client": "npm start --prefix client",
+    "server": "nodemon server.js",
+    "dev": "concurrently \"nodemon server.js\" \"npm run client\"",
+    "build": "cd client/ && npm install && npm run build"
   },
   "repository": {
     "type": "git",
@@ -19,11 +25,15 @@
   "homepage": "https://github.com/m-tran/illustration-lib#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "concurrently": "^6.2.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mongoose": "^5.12.12",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
