--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@adobe/react-spectrum": "^3.10.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "mini-css-extract-plugin": "^1.6.0",
+    "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "styled-components": "^5.3.0",
+    "styled-system": "^5.1.5",
+    "type-fest": "^1.1.3",
+    "web-vitals": "^1.1.2",
+    "webpack-cli": "^4.7.0"
   },
   "scripts": {
+    "develop": "webpack-dev-server --env.NODE_ENV=development --mode development",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "css-loader": "^5.2.6"
+  },
+  "proxy": "http://localhost:5000"
 }
