--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "autoprefixer": "^10.2.6",
+    "eslint-loader": "^4.0.2",
     "mini-css-extract-plugin": "^1.6.0",
     "path": "^0.12.7",
     "postcss-loader": "^5.3.0",
@@ -47,7 +48,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
-    "css-loader": "^5.2.6"
+    "babel-eslint": "^10.1.0",
+    "css-loader": "^5.2.6",
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^1.7.0"
   },
   "proxy": "http://localhost:5000"
 }
