--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,8 +1,22 @@
 {
-    "parser": "babel-eslint",
-    "extends": ["airbnb"],
-    "rules": {
-      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-      "no-unused-vars": 0
-    }
-  }
+	"parser": "babel-eslint",
+	"extends": [
+		"airbnb"
+	],
+	"rules": {
+		"indent": [2, "tab", { "SwitchCase": 1, "VariableDeclarator": 1 }],
+        "no-tabs": 0,
+        "react/prop-types": 0,
+        "react/jsx-indent": [2, "tab"],
+        "react/jsx-indent-props": [2, "tab"],
+		"react/jsx-filename-extension": [
+			1,
+			{
+				"extensions": [
+					".js",
+					".jsx"
+				]
+			}
+		]
+	}
+}
