--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "mini-css-extract-plugin": "^1.6.0",
     "path": "^0.12.7",
     "postcss-loader": "^5.3.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5",
