--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,12 @@
     "postcss-loader": "^5.3.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
+    "react-items-carousel": "^2.8.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-touch-carousel": "^0.9.4",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5",
     "type-fest": "^1.1.3",
