--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-touch-carousel": "^0.9.4",
+    "redux": "^4.1.0",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5",
     "type-fest": "^1.1.3",
