--- a/client/package.json
+++ b/client/package.json
@@ -1,67 +1,68 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@adobe/react-spectrum": "^3.10.0",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "autoprefixer": "^10.2.6",
-    "eslint-loader": "^4.0.2",
-    "mini-css-extract-plugin": "^1.6.0",
-    "path": "^0.12.7",
-    "postcss-loader": "^5.3.0",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-alice-carousel": "^2.5.1",
-    "react-dom": "^17.0.2",
-    "react-items-carousel": "^2.8.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-touch-carousel": "^0.9.4",
-    "redux": "^4.1.0",
-    "styled-components": "^5.3.0",
-    "styled-system": "^5.1.5",
-    "type-fest": "^1.1.3",
-    "web-vitals": "^1.1.2",
-    "webpack-cli": "^4.7.0"
-  },
-  "scripts": {
-    "develop": "webpack-dev-server --env.NODE_ENV=development --mode development",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "babel-eslint": "^10.1.0",
-    "css-loader": "^5.2.6",
-    "eslint": "^7.27.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^1.7.0"
-  },
-  "proxy": "http://localhost:5000"
+	"name": "client",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@adobe/react-spectrum": "^3.10.0",
+		"@testing-library/jest-dom": "^5.12.0",
+		"@testing-library/react": "^11.2.7",
+		"@testing-library/user-event": "^12.8.3",
+		"autoprefixer": "^10.2.6",
+		"axios": "^0.21.1",
+		"eslint-loader": "^4.0.2",
+		"mini-css-extract-plugin": "^1.6.0",
+		"path": "^0.12.7",
+		"postcss-loader": "^5.3.0",
+		"prop-types": "^15.7.2",
+		"react": "^17.0.2",
+		"react-alice-carousel": "^2.5.1",
+		"react-dom": "^17.0.2",
+		"react-items-carousel": "^2.8.0",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "4.0.3",
+		"react-touch-carousel": "^0.9.4",
+		"redux": "^4.1.0",
+		"styled-components": "^5.3.0",
+		"styled-system": "^5.1.5",
+		"type-fest": "^1.1.3",
+		"web-vitals": "^1.1.2",
+		"webpack-cli": "^4.7.0"
+	},
+	"scripts": {
+		"develop": "webpack-dev-server --env.NODE_ENV=development --mode development",
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@babel/core": "^7.14.3",
+		"babel-eslint": "^10.1.0",
+		"css-loader": "^5.2.6",
+		"eslint": "^7.27.0",
+		"eslint-config-airbnb": "^18.2.1",
+		"eslint-plugin-import": "^2.23.4",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-react": "^7.24.0",
+		"eslint-plugin-react-hooks": "^1.7.0"
+	},
+	"proxy": "http://localhost:5000/"
 }
