--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node server.js",
     "client": "npm start --prefix client",
     "server": "nodemon server.js",
-    "dev": "concurrently \"nodemon server.js\" \"npm run client\"",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "cd client/ && npm install && npm run build"
   },
   "repository": {
@@ -31,6 +31,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "mongodb": "^3.6.9",
     "mongoose": "^5.12.12",
     "path": "^0.12.7"
   },
