--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
 		"@testing-library/user-event": "^12.8.3",
 		"autoprefixer": "^10.2.6",
 		"axios": "^0.21.1",
+		"canvas": "^2.8.0",
 		"eslint-loader": "^4.0.2",
+		"merge-images-v2": "^2.0.1",
 		"mini-css-extract-plugin": "^1.6.0",
 		"path": "^0.12.7",
 		"postcss-loader": "^5.3.0",
