--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
 		"react-alice-carousel": "^2.5.1",
 		"react-dom": "^17.0.2",
 		"react-items-carousel": "^2.8.0",
+		"react-loader-spinner": "^4.0.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"react-touch-carousel": "^0.9.4",
