Add client folder back to git repo

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "illustration-lib",
   "version": "1.0.0",
+  "engines": {
+	"node": "12.4.0"
+  },
   "description": "an open source illustration library",
   "main": "index.js",
   "scripts": {
