updated node engine

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "engines": {
 	"npm": "6.x",
-	"node": "12.4.0"
+	"node": "14.x"
   },
   "description": "an open source illustration library",
   "main": "index.js",
